fucion saludo agregado

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="scritp.js"></script>
 </head>
 <body>
     <h1>TITULO DE CURSO GITHUD</h1>
 
     <h2>CAMBIO NUMERO DOS</h2>
+
+    <input type="button" onclick="saludo()">
 </body>
 </html>
